# nkca

./: .gitignore  README.md  environment.yml  pyproject.toml
src/nkca/: __init__.py  datasets.py  distribution.py  model.py  primitives.py  sampling.py  session.py  util.py
src/nkca_cli/: datasets.py  interactive.py  metrics.py  model.py  sample.py  train.py  util.py
